footer gap+top-border nav linnks hover (smartphone display) fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -547,15 +547,16 @@ footer li {
   #hebergements {
     background: #fff;
   }
-
   #populaires .container {
     flex-flow: row wrap;
     justify-content: space-around;
   }
-
   #populaires .card {
     width: 30%;
     height: auto;
+  }
+  footer {
+    gap: 110px;
   }
 }
 
@@ -582,8 +583,10 @@ footer li {
     padding: 20px 0 10px 0;
     border-bottom: solid var(--grisclair) 3px;
   }
+  header li a:hover {
+    border-top: solid white 2px;
+  }
   header li:hover {
-    border-top: none;
     border-bottom: solid var(--bleu) 3px;
     color: var(--bleu);
   }
@@ -659,7 +662,6 @@ footer li {
   }
   #activites .container {
     flex-flow: column nowrap;
-    /* justify-content: space-between; */
     height: 100%;
     gap: 25px;
   }
@@ -683,6 +685,5 @@ footer li {
     align-items: flex-start;
     gap: 0px;
     height: 486px;
-    /* padding: 33px 50px; */
   }
 }
